--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,7 +1,7 @@
 <section class="about-us">
   <div class="container">
-    <img class="about-us__img" src="./images/main/about-us.png" alt="no-idea" />
-    <div class="about-us__box">
+    <div class="about-us__img img-box"></div>
+    <div class="about-us__box img-box">
       <h2 class="about-us__title">О нас</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate velit numquam vero magni!
