--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,9 +3,9 @@
     <a id="logo" href="index.html">Rice</a>
     <nav class="header__nav">
       <ul class="nav__list">
-        <li class="nav__elem nav__elem--underline"><a href="#">Главная</a></li>
-        <li class="nav__elem"><a href="#">Меню</a></li>
-        <li class="nav__elem"><a href="#">Контакты</a></li>
+        <li class="nav__elem main nav__elem--underline"><a href="">Главная</a></li>
+        <li class="nav__elem menu"><a href="">Меню</a></li>
+        <li class="nav__elem contacts"><a href="">Контакты</a></li>
       </ul>
     </nav>
     <ul class="header__tel">
