--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,10 @@
 <section class="hero">
   <div class="container">
-    <div class="hero__box1"></div>
-    <div class="hero__box2">
-      <h1 class="hero__title">YOU DON'T NEED A SILVER FORK TO EAT GOOD FOOD</h1>
+    <div class="hero__box1 img-box"></div>
+    <div class="hero__box2 img-box">
+      <h1 class="hero__title">YOU DON'T NEED A SILVER FORK TO EAT <span>GOOD FOOD</span></h1>
       <a class="hero__link" href="">Наше меню</a>
     </div>
-    <div class="hero__box3"></div>
+    <div class="hero__box3 img-box"></div>
   </div>
 </section>
