--- a/src/sass/layout/_special-offers.scss
+++ b/src/sass/layout/_special-offers.scss
@@ -2,35 +2,34 @@
   border: 2px solid var(--white-color);
   background-color: var(--grey-color);
   .container {
-    padding: 15px 0 60px 350px;
+    padding: 40px 0 80px 300px;
   }
   &__title {
-    @include font(70px, 400, 82px);
-    margin-bottom: 50px;
+    @include font(64px, 400, 72px);
+    margin-bottom: 40px;
     text-align: center;
   }
   &__list {
     display: flex;
-    width: 1100px;
+    justify-content: center;
+    padding: 0 -30px -24px;
   }
   &__elem {
-    @include font(20px, 400, 24px);
-    @include shadow(0, 30px);
-    width: 350px;
-    padding: 10px 10px 30px;
+    @include font(16px, 400, 24px);
+    @include shadow(0, 32px);
+    width: 320px;
+    margin: 0 30px 24px;
+    padding: 10px;
     border: 2px solid var(--white-color);
-    border-radius: 20px;
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
+    border-radius: 24px;
   }
   &__img {
     width: 100%;
     border: 2px solid var(--white-color);
-    border-radius: 20px;
+    border-radius: 24px;
   }
   &__name {
-    @include font(30px, 400, 35px);
+    @include font(24px, 400, 32px);
     text-align: center;
   }
 }
