responsive main header and main

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,7 +1,7 @@
 <section class="about-us">
   <div class="container">
-    <div class="about-us__img img-box"></div>
-    <div class="about-us__box img-box">
+    <div class="about-us__img borders"></div>
+    <div class="about-us__box borders">
       <h2 class="about-us__title">О нас</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate velit numquam vero magni!
@@ -15,7 +15,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, nisi omnis. Veritatis quisquam
         voluptates maiores corrupti iusto dolore, vero quidem.
       </p>
-      <a class="about-us__link" href="">Узнать больше</a>
+      <a class="about-us__link borders" href="">Узнать больше</a>
     </div>
   </div>
 </section>
