--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,10 @@
 <header class="header">
   <div class="header__container">
+    <button class="header__close">
+      <svg class="close-icon" width="40px" height="40px">
+        <use href="./images/sprite.svg#icon-close"></use>
+      </svg>
+    </button>
     <a id="logo" href="index.html">Rice</a>
     <nav class="header__nav">
       <ul class="nav__list">
