--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,15 @@
-<section class="hero">
+<section class="hero is-closed">
   <div class="container">
-    <div class="hero__box1 img-box"></div>
-    <div class="hero__box2 img-box">
+    <button class="hero__open">
+      <svg class="close-icon" width="40px" height="40px">
+        <use href="./images/sprite.svg#icon-burger"></use>
+      </svg>
+    </button>
+    <div class="hero__box1 borders"></div>
+    <div class="hero__box2 borders">
       <h1 class="hero__title">YOU DON'T NEED A SILVER FORK TO EAT <span>GOOD FOOD</span></h1>
-      <a class="hero__link" href="">Наше меню</a>
+      <a class="hero__link borders" href="">Наше меню</a>
     </div>
-    <div class="hero__box3 img-box"></div>
+    <div class="hero__box3 borders"></div>
   </div>
 </section>
