--- a/src/partials/special-offers.html
+++ b/src/partials/special-offers.html
@@ -1,33 +1,27 @@
 <section class="special-offers">
   <div class="container">
     <h2 class="special-offers__title">Специальное предложение</h2>
-    <ul class="special-offers__list">
-      <li class="special-offers__elem">
-        <img src="./images/main/special-offers1.png" alt="pho-bowl" class="special-offers__img" />
-        <h3 class="special-offers__name">Pho</h3>
-        <p class="special-offers__price">Price: 120$</p>
-        <p class="special-offers__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, ea ipsa accusantium magnam
-          quasi quo?
-        </p>
+    <ul class="card__list">
+      <li class="card__elem borders">
+        <div class="card__img borders card__img--1"></div>
+        <div class="card__info">
+          <h3 class="card__name">Pho</h3>
+          <p class="card__price">Price: 120$</p>
+        </div>
       </li>
-      <li class="special-offers__elem">
-        <img src="./images/main/special-offers2.png" alt="pho-bowl" class="special-offers__img" />
-        <h3 class="special-offers__name">Pho</h3>
-        <p class="special-offers__price">Price: 120$</p>
-        <p class="special-offers__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, ea ipsa accusantium magnam
-          quasi quo?
-        </p>
+      <li class="card__elem borders">
+        <div class="card__img borders card__img--2"></div>
+        <div class="card__info">
+          <h3 class="card__name">Pho</h3>
+          <p class="card__price">Price: 120$</p>
+        </div>
       </li>
-      <li class="special-offers__elem">
-        <img src="./images/main/special-offers3.png" alt="pho-bowl" class="special-offers__img" />
-        <h3 class="special-offers__name">Pho</h3>
-        <p class="special-offers__price">Price: 120$</p>
-        <p class="special-offers__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, ea ipsa accusantium magnam
-          quasi quo?
-        </p>
+      <li class="card__elem borders">
+        <div class="card__img borders card__img--3"></div>
+        <div class="card__info">
+          <h3 class="card__name">Pho</h3>
+          <p class="card__price">Price: 120$</p>
+        </div>
       </li>
     </ul>
   </div>
