--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,4 +1,14 @@
 .container {
-  width: 1440px;
   margin: 0 auto;
+  padding: 16px 24px 40px;
+  @include min-width('small') {
+    width: 375px;
+  }
+  @include min-width('medium') {
+    width: 768px;
+  }
+  @include min-width('large') {
+    width: 1200px;
+    padding: 40px 24px 80px 280px;
+  }
 }
