--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,58 +1,158 @@
+// .hero {
+//   .container {
+//     position: relative;
+//     height: 880px;
+//   }
+//   &__box1 {
+//     @include shadow(-32px, 32px);
+//     position: absolute;
+//     top: 24px;
+//     right: 40px;
+//     width: 464px;
+//     height: 280px;
+//     background-image: url('../images/main/hero1.png');
+//     z-index: 1;
+//   }
+//   &__box2 {
+//     position: absolute;
+//     top: 160px;
+//     right: 300px;
+//     width: 720px;
+//     height: 480px;
+//     background-image: url('../images/main/hero2.png');
+//     padding: 35px 0 0 25px;
+//   }
+//   &__box3 {
+//     @include shadow(-32px, 32px);
+//     position: absolute;
+//     top: 520px;
+//     right: 160px;
+//     width: 440px;
+//     height: 280px;
+//     background-image: url('../images/main/hero3.png');
+//   }
+//   &__title {
+//     @include font(64px, 400, 72px);
+//     width: 480px;
+//     & span {
+//       display: block;
+//       font-weight: 700;
+//       text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff,
+//         -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+//       color: var(--red-color);
+//     }
+//   }
+//   &__link {
+//     @include font(24px, 400, 32px);
+//     @include shadow(-30px, 30px);
+//     display: block;
+//     width: fit-content;
+//     margin-top: 40px;
+//     padding: 16px 48px;
+//     border: 2px solid var(--white-color);
+//     border-radius: 32px;
+//     background-color: var(--red-color);
+//     color: var(--white-color);
+//     cursor: pointer;
+//   }
+// }
+
 .hero {
   .container {
     position: relative;
-    height: 880px;
+    height: 280px;
+    @include min-width('large') {
+      height: 640px;
+    }
+  }
+  &__open {
+    @include max-width('large') {
+      position: absolute;
+      top: 12px;
+      left: 24px;
+      padding: 0;
+      border: none;
+      background-color: transparent;
+    }
+    @include min-width('large') {
+      display: none;
+    }
   }
   &__box1 {
-    @include shadow(-32px, 32px);
     position: absolute;
     top: 24px;
-    right: 40px;
-    width: 464px;
-    height: 280px;
+    right: 32px;
+    width: 160px;
+    height: 104px;
     background-image: url('../images/main/hero1.png');
+    background-size: cover;
     z-index: 1;
+    @include min-width('large') {
+      width: 400px;
+      height: 240px;
+    }
   }
   &__box2 {
     position: absolute;
-    top: 160px;
-    right: 300px;
-    width: 720px;
-    height: 480px;
-    background-image: url('../images/main/hero2.png');
-    padding: 35px 0 0 25px;
+    top: 64px;
+    right: 80px;
+    width: 264px;
+    height: 200px;
+    padding: 24px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.2), rgba(47, 48, 58, 0.2)),
+      url('../images/main/hero2.png');
+    background-size: cover;
+    @include min-width('large') {
+      top: 120px;
+      right: 240px;
+      width: 600px;
+      height: 400px;
+      padding: 40px;
+    }
   }
   &__box3 {
-    @include shadow(-32px, 32px);
-    position: absolute;
-    top: 520px;
-    right: 160px;
-    width: 440px;
-    height: 280px;
-    background-image: url('../images/main/hero3.png');
+    @include max-width('large') {
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+    @include min-width('large') {
+      position: absolute;
+      top: 400px;
+      right: 180px;
+      width: 320px;
+      height: 200px;
+      background-image: url('../images/main/hero3.png');
+      background-size: cover;
+      z-index: 1;
+    }
   }
   &__title {
-    @include font(64px, 400, 72px);
-    width: 480px;
+    @include font(16px, 700, 24px);
+    width: 120px;
+    @include min-width('large') {
+      @include font(32px, 700, 40px);
+      width: 240px;
+    }
     & span {
       display: block;
-      font-weight: 700;
       text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff,
         -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
       color: var(--red-color);
     }
   }
   &__link {
-    @include font(24px, 400, 32px);
-    @include shadow(-30px, 30px);
-    display: block;
+    @include font(16px, 700, 24px);
     width: fit-content;
-    margin-top: 40px;
-    padding: 16px 48px;
-    border: 2px solid var(--white-color);
-    border-radius: 32px;
+    margin-top: 24px;
+    margin-left: auto;
+    padding: 4px 12px;
     background-color: var(--red-color);
-    color: var(--white-color);
-    cursor: pointer;
+    @include min-width('large') {
+      @include font(24px, 400, 32px);
+      margin-top: 40px;
+      margin-left: 0;
+      padding: 12px 32px;
+    }
   }
 }
