--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -37,3 +37,13 @@
 @mixin shadow($offset-x: 0, $offset-y: 30px) {
   box-shadow: $offset-x $offset-y 30px rgb(0, 0, 0, 0.5);
 }
+@mixin min-width($width) {
+  @media (min-width: map-get($min-widths, $width)) {
+    @content;
+  }
+}
+@mixin max-width($width) {
+  @media (max-width: map-get($max-widths, $width)) {
+    @content;
+  }
+}
