add footer scss

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,30 @@
 <footer class="footer">
-  <div class="footer__container">
+  <div class="container">
     <div class="footer__sm">
       <h2 class="footer__title">Контакты</h2>
+      <ul class="footer__sm__list">
+        <li class="sm__elem">
+          <a href="" class="sm__link">
+            <svg class="sm__icon">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="sm__elem">
+          <a href="" class="sm__link">
+            <svg class="sm__icon">
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="sm__elem">
+          <a href="" class="sm__link">
+            <svg class="sm__icon">
+              <use href="./images/sprite.svg#icon-telegram"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
     <address class="footer__contacts">
       <div class="contacts__key">
