--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,4 +19,4 @@
 @import './layout/about-us';
 // @import './layout/hero2';
 // @import './layout/menu';
-// @import './layout/footer';
+@import './layout/footer';
