add menu page scss

--- a/src/partials/hero2.html
+++ b/src/partials/hero2.html
@@ -1,7 +1,12 @@
 <section class="hero2">
   <div class="container">
-    <div class="hero2__box1 img-box"></div>
-    <div class="hero2__box2 img-box"></div>
-    <div class="hero2__box3 img-box"></div>
+    <button class="hero2__open open">
+      <svg class="close-icon" width="40px" height="40px">
+        <use href="./images/sprite.svg#icon-burger"></use>
+      </svg>
+    </button>
+    <div class="hero2__box1 borders"></div>
+    <div class="hero2__box2 borders"></div>
+    <div class="hero2__box3 borders"></div>
   </div>
 </section>
