--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -2,22 +2,22 @@
   <div class="container">
     <ul class="menu-nav__list">
       <li class="menu-nav__elem">
-        <a href="#" class="menu-nav__link img-box vok menu-nav__link--decor">ВОК</a>
+        <a href="#" class="menu-nav__link vok borders">ВОК</a>
       </li>
       <li class="menu-nav__elem">
-        <a href="#" class="menu-nav__link premium img-box">ПРЕМІУМ</a>
+        <a href="#" class="menu-nav__link soup borders">СУПИ & ХОТ-ПОТ</a>
       </li>
       <li class="menu-nav__elem">
-        <a href="#" class="menu-nav__link soup img-box">СУПИ & ХОТ-ПОТ</a>
+        <a href="#" class="menu-nav__link premium borders">ПРЕМІУМ</a>
       </li>
       <li class="menu-nav__elem">
-        <a href="#" class="menu-nav__link salad img-box">САЛАТИ & СНЕКИ</a>
+        <a href="#" class="menu-nav__link salad borders">САЛАТИ & СНЕКИ</a>
       </li>
     </ul>
   </div>
 </section>
 <section class="menu-list">
   <div class="container">
-    <ul class="menu-list__list"></ul>
+    <ul class="card__list menu-list__list"></ul>
   </div>
 </section>
