--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero is-closed">
   <div class="container">
-    <button class="hero__open">
+    <button class="hero__open open">
       <svg class="close-icon" width="40px" height="40px">
         <use href="./images/sprite.svg#icon-burger"></use>
       </svg>
