--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -9,7 +9,7 @@
     padding: 16px;
     margin-bottom: 16px;
     @include min-width('large') {
-      margin: 0 8px;
+      margin: 16px 8px;
       padding: 8px 8px 24px;
     }
   }
