--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -34,6 +34,7 @@
 // }
 
 .footer {
+  border-top: 2px solid var(--white-color);
   background-color: var(--dark-grey-color);
   .container {
     @include min-width('large') {
