--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -20,9 +20,11 @@
     width: 280px;
   }
   &.is-closed {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+    @include max-width('large') {
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
   }
   &__container {
     position: relative;
