--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,36 +1,71 @@
+// .menu-nav {
+//   border: 2px solid var(--white-color);
+//   background-color: var(--grey-color);
+//   .container {
+//     padding: 40px 40px 40px 320px;
+//   }
+//   &__list {
+//     display: flex;
+//   }
+//   &__elem {
+//     @include shadow(0, 16px);
+//     &:not(:last-child) {
+//       margin-right: 20px;
+//     }
+//   }
+//   &__link {
+//     padding: 10px 20px;
+//     background-color: var(--red-color);
+//     &--decor {
+//       border-color: var(--red-color);
+//       background-color: var(--white-color);
+//       color: var(--red-color);
+//     }
+//   }
+// }
+// .menu-list {
+//   background-color: var(--dark-grey-color);
+//   .container {
+//     padding: 60px 0 60px 300px;
+//   }
+//   &__list {
+//     display: flex;
+//     justify-content: center;
+//     flex-wrap: wrap;
+//   }
+// }
+
 .menu-nav {
-  border: 2px solid var(--white-color);
-  background-color: var(--grey-color);
   .container {
-    padding: 40px 40px 40px 320px;
+    padding-bottom: 16px;
+    @include min-width('large') {
+      padding-bottom: 40px;
+    }
   }
+  border-top: 2px solid var(--white-color);
+  border-bottom: 2px solid var(--white-color);
+  background-color: var(--dark-grey-color);
   &__list {
     display: flex;
+    flex-wrap: wrap;
   }
   &__elem {
-    @include shadow(0, 16px);
-    &:not(:last-child) {
-      margin-right: 20px;
+    margin-right: 8px;
+    margin-bottom: 4px;
+    @include min-width('large') {
+      margin-right: 16px;
+      margin-bottom: 0;
     }
   }
   &__link {
-    padding: 10px 20px;
+    @include font(16px, 400, 24px);
     background-color: var(--red-color);
-    &--decor {
-      border-color: var(--red-color);
-      background-color: var(--white-color);
-      color: var(--red-color);
+    padding: 4px 12px;
+    @include min-width('large') {
+      @include font(24px, 400, 32px);
     }
   }
 }
 .menu-list {
-  background-color: var(--dark-grey-color);
-  .container {
-    padding: 60px 0 60px 300px;
-  }
-  &__list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+  background-color: var(--grey-color);
 }
