--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './utils/_variables';
 @import './utils/mixin';
 @import './utils/visually-hidden';
+@import './utils/burger';
 
 // base
 @import './base/common';
@@ -17,6 +18,6 @@
 @import './layout/hero';
 @import './layout/special-offers';
 @import './layout/about-us';
-// @import './layout/hero2';
-// @import './layout/menu';
+@import './layout/hero2';
+@import './layout/menu';
 @import './layout/footer';
