add contacts page scss

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -34,7 +34,7 @@
       <div class="contacts__value">
         <span>+38093 111 11 11</span>
         <span>+38093 222 22 22</span>
-        <span>abc street, 30</span>
+        <span>вулиця Мироносицька, 94</span>
       </div>
     </address>
   </div>
