--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,4 +20,6 @@
 @import './layout/about-us';
 @import './layout/hero2';
 @import './layout/menu';
+@import './layout/hero3';
+@import './layout/location';
 @import './layout/footer';
