--- a/src/partials/special-offers.html
+++ b/src/partials/special-offers.html
@@ -3,21 +3,21 @@
     <h2 class="special-offers__title">Специальное предложение</h2>
     <ul class="card__list">
       <li class="card__elem borders">
-        <div class="card__img borders card__img--1"></div>
+        <img class="card__img borders card__img--1" src="" alt="food" />
         <div class="card__info">
           <h3 class="card__name">Pho</h3>
           <p class="card__price">Price: 120$</p>
         </div>
       </li>
       <li class="card__elem borders">
-        <div class="card__img borders card__img--2"></div>
+        <img class="card__img borders card__img--2" src="" alt="food" />
         <div class="card__info">
           <h3 class="card__name">Pho</h3>
           <p class="card__price">Price: 120$</p>
         </div>
       </li>
       <li class="card__elem borders">
-        <div class="card__img borders card__img--3"></div>
+        <img class="card__img borders card__img--3" src="" alt="food" />
         <div class="card__info">
           <h3 class="card__name">Pho</h3>
           <p class="card__price">Price: 120$</p>
