--- a/src/sass/layout/_about-us.scss
+++ b/src/sass/layout/_about-us.scss
@@ -1,46 +1,3 @@
-// .about-us {
-//   .container {
-//     position: relative;
-//     height: 995px;
-//   }
-//   &__img {
-//     @include shadow(16px, 32px);
-//     position: absolute;
-//     top: 120px;
-//     right: 640px;
-//     width: 480px;
-//     height: 600px;
-//     background-image: url('../images/main/about-us.png');
-//     z-index: 1;
-//   }
-//   &__box {
-//     position: absolute;
-//     top: 240px;
-//     right: 32px;
-//     width: 680px;
-//     padding: 40px 24px;
-//     background-color: var(--grey-color);
-//   }
-//   &__title {
-//     @include font(64px, 400, 72px);
-//     text-align: center;
-//   }
-//   & p {
-//     @include font(16px, 400, 24px);
-//     margin: 16px 0 0 80px;
-//   }
-//   &__link {
-//     @include font(24px, 400, 32px);
-//     width: fit-content;
-//     margin: 64px 0 0 280px;
-//     padding: 16px 48px;
-//     border: 2px solid var(--white-color);
-//     border-radius: 30px;
-//     text-align: center;
-//     background-color: var(--red-color);
-//   }
-// }
-
 .about-us {
   .container {
     @include min-width('large') {
@@ -49,6 +6,7 @@
     }
   }
   &__img {
+    @include shadow(16px, 16px);
     @include max-width('large') {
       opacity: 0;
       visibility: hidden;
@@ -89,6 +47,7 @@
     text-align: center;
   }
   &__link {
+    @include shadow(0, 16px);
     @include font(16px, 700, 24px);
     width: fit-content;
     margin-top: 24px;
