--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,62 +1,3 @@
-// .hero {
-//   .container {
-//     position: relative;
-//     height: 880px;
-//   }
-//   &__box1 {
-//     @include shadow(-32px, 32px);
-//     position: absolute;
-//     top: 24px;
-//     right: 40px;
-//     width: 464px;
-//     height: 280px;
-//     background-image: url('../images/main/hero1.png');
-//     z-index: 1;
-//   }
-//   &__box2 {
-//     position: absolute;
-//     top: 160px;
-//     right: 300px;
-//     width: 720px;
-//     height: 480px;
-//     background-image: url('../images/main/hero2.png');
-//     padding: 35px 0 0 25px;
-//   }
-//   &__box3 {
-//     @include shadow(-32px, 32px);
-//     position: absolute;
-//     top: 520px;
-//     right: 160px;
-//     width: 440px;
-//     height: 280px;
-//     background-image: url('../images/main/hero3.png');
-//   }
-//   &__title {
-//     @include font(64px, 400, 72px);
-//     width: 480px;
-//     & span {
-//       display: block;
-//       font-weight: 700;
-//       text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff,
-//         -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
-//       color: var(--red-color);
-//     }
-//   }
-//   &__link {
-//     @include font(24px, 400, 32px);
-//     @include shadow(-30px, 30px);
-//     display: block;
-//     width: fit-content;
-//     margin-top: 40px;
-//     padding: 16px 48px;
-//     border: 2px solid var(--white-color);
-//     border-radius: 32px;
-//     background-color: var(--red-color);
-//     color: var(--white-color);
-//     cursor: pointer;
-//   }
-// }
-
 .hero {
   .container {
     position: relative;
@@ -66,6 +7,7 @@
     }
   }
   &__box1 {
+    @include shadow(-16px, 16px);
     position: absolute;
     top: 24px;
     right: 32px;
@@ -98,6 +40,7 @@
     }
   }
   &__box3 {
+    @include shadow(-16px, -16px);
     @include max-width('large') {
       opacity: 0;
       visibility: hidden;
@@ -129,6 +72,7 @@
     }
   }
   &__link {
+    @include shadow(0, 16px);
     @include font(16px, 700, 24px);
     width: fit-content;
     margin-top: 24px;
