--- a/src/sass/layout/_hero2.scss
+++ b/src/sass/layout/_hero2.scss
@@ -1,36 +1,3 @@
-// .hero2 {
-//   .container {
-//     position: relative;
-//     height: 600px;
-//   }
-//   &__box1 {
-//     position: absolute;
-//     top: 200px;
-//     right: 840px;
-//     width: 240px;
-//     height: 320px;
-//     background-image: url('../images/menu/hero1.png');
-//     z-index: 1;
-//   }
-//   &__box2 {
-//     position: absolute;
-//     top: 100px;
-//     right: 360px;
-//     width: 560px;
-//     height: 320px;
-//     background-image: url('../images/menu/hero2.png');
-//   }
-//   &__box3 {
-//     position: absolute;
-//     top: 240px;
-//     right: 80px;
-//     width: 360px;
-//     height: 240px;
-//     background-image: url('../images/menu/hero3.png');
-//     z-index: 1;
-//   }
-// }
-
 .hero2 {
   .container {
     position: relative;
@@ -40,6 +7,7 @@
     }
   }
   &__box1 {
+    @include shadow(16px, -16px);
     position: absolute;
     top: 100px;
     right: 200px;
@@ -71,6 +39,7 @@
     }
   }
   &__box3 {
+    @include shadow(-16px, -16px);
     @include max-width('large') {
       opacity: 0;
       visibility: hidden;
