--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,40 +1,3 @@
-// .menu-nav {
-//   border: 2px solid var(--white-color);
-//   background-color: var(--grey-color);
-//   .container {
-//     padding: 40px 40px 40px 320px;
-//   }
-//   &__list {
-//     display: flex;
-//   }
-//   &__elem {
-//     @include shadow(0, 16px);
-//     &:not(:last-child) {
-//       margin-right: 20px;
-//     }
-//   }
-//   &__link {
-//     padding: 10px 20px;
-//     background-color: var(--red-color);
-//     &--decor {
-//       border-color: var(--red-color);
-//       background-color: var(--white-color);
-//       color: var(--red-color);
-//     }
-//   }
-// }
-// .menu-list {
-//   background-color: var(--dark-grey-color);
-//   .container {
-//     padding: 60px 0 60px 300px;
-//   }
-//   &__list {
-//     display: flex;
-//     justify-content: center;
-//     flex-wrap: wrap;
-//   }
-// }
-
 .menu-nav {
   .container {
     padding-bottom: 16px;
@@ -50,6 +13,7 @@
     flex-wrap: wrap;
   }
   &__elem {
+    @include shadow(0, 16px);
     margin-right: 8px;
     margin-bottom: 4px;
     @include min-width('large') {
